--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -38,12 +38,17 @@
                                     <div class="col-md-8">
                                         <input type="password" name="password" value="" minlength="6" class="form-control" required />
                                     </div>
-                                    
+
                                 </div>
                                 <div class="form-group" style="float: right; margin-top: 2%;">
                                     <input name="submit" type="submit" value="Login" class="btn btn-success txt" />
                                 </div>
                             </form>
+                            @if (TempData["loginFlag"] == null)
+                            {
+                                <p class="text-center" style="color: red; margin-left:6%; margin-top:1%;">@TempData["message"]</p>
+                            }
+                            
                         </div>
                     </div>
                 </div>
